tests/trybuild-failures/not_comparison.stderr
error[E0308]: mismatched types
 --> $DIR/not_comparison.rs:6:16
  |
6 |     assertify!(1 + 2);
  |     -----------^^^^^-
  |     |          |
  |     |          expected `bool`, found integer
  |     expected due to this
